--- a/src/index.css
+++ b/src/index.css
@@ -16,27 +16,65 @@ code {
 .gradient {
   background: #466368;
   background: radial-gradient(#FEFEFE,#61BCC1);
-  /* border-radius: 6px;
-  height: 120px; */
-  width: 1360px;
-  height: 580px;
+  width: 100%;
+  height: 100%;
 }
 
 .yellowButton{
   background: radial-gradient(#FEEC21,#E0A821);
   border-radius: 200px;
-  height: 400px;
+  height: 400x;
   width: 400px;
   align-items: center;
+  margin-top: 30px;
+  margin-bottom: 30px
 }
 .yellowButton:hover{
   background: radial-gradient(#e5d02d,#d19917);
 }
 
+.blueBorder{
+  border-color: #066268;
+  border-radius: 10px;
+  background: radial-gradient(#FEFEFE,#61BCC1);
+  width:800px;
+  height: 400px;
+  border-style: solid;
+  border-width: 7px;
+  z-index: 5;
+}
+
+.layerNetral{
+  z-index: 0;
+  position: relative;
+  display: table;
+  background: #C9002F;
+  width:100%;
+  height: 100%;
+}
+
+.layerPlus{
+  z-index: 10;
+  position: absolute;
+  margin-top: 0px;
+  display: table;
+}
+
+.layerMinus{
+  z-index: 5;
+  position: absolute;
+  display: table;
+}
+
 .whiteSpace{
   background-color: white;
-  width:300px;
-  height: 100px;
+  border-radius:10px;
+  margin-top: 20px;
+}
+
+img{
+  width:120px;
+  height:120px;
 }
 
 .flexContainer{
@@ -49,4 +87,32 @@ code {
   fill: #005184;
   font-size: 25.1px;
   font-weight: bold;
+}
+
+.ktaFont{
+  color: #C9002F;
+  font-weight: 1000;
+  font-size: 40px !important;
+  font-family: sans-serif
+}
+
+.ktaFont2{
+  color: #C9002F;
+  font-weight: 1000;
+  font-size: 28px !important;
+  font-family: sans-serif
+}
+
+.kiri{
+  margin-left: -24px
+}
+.kiri2{
+  margin-left: -68px
+}
+
+.practech{
+  color: #C9002F;
+  font-weight: 1000;
+  font-size: 80px !important;
+  font-family: sans-serif
 }
