--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
-body {
-  margin: 0;
+html, body, #app, #app>div  {
+  margin: 0px;
+  height: 100%;
+  width: 100%;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -18,8 +20,14 @@ code {
   background: radial-gradient(#FEFEFE,#61BCC1);
   width: 100%;
   height: 100%;
+  min-height: 100vh;
+  min-width: 100vh;
+  z-index: 0;
 }
 
+.logz{
+  margin-top: -345px;
+}
 .yellowButton{
   background: radial-gradient(#FEEC21,#E0A821);
   border-radius: 200px;
@@ -60,6 +68,10 @@ code {
   display: table;
 }
 
+.logoz{
+  z-index: 100;
+}
+
 .layerMinus{
   z-index: 5;
   position: absolute;
@@ -72,9 +84,9 @@ code {
   margin-top: 20px;
 }
 
-img{
-  width:120px;
-  height:120px;
+.logoKcpm{
+  width: 100%;
+  height: 100%;
 }
 
 .flexContainer{
